--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.0.1",
+    "gsap": "^3.8.0",
     "mongoose": "^6.0.12",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
